@@ -20,7 +20,7 @@ mpqc::detail::ForceLink<RMP2> fl1;
 mpqc::detail::ForceLink<RIRMP2> fl2;
 mpqc::detail::ForceLink<DBRMP2> fl3;
 mpqc::detail::ForceLink<RIDBRMP2> fl4;
-}  // namespace mbpt
+}  // namespace
 }  // namespace lcao
 }  // namespace mpqc
 
