@@ -16,7 +16,7 @@ class RIRHF;
 class DirectRHF;
 class DirectRIRHF;
 class zRHF;
-namespace {
+namespace scf {
 mpqc::detail::ForceLink<RHF> fl1;
 mpqc::detail::ForceLink<RIRHF> fl2;
 mpqc::detail::ForceLink<DirectRHF> fl3;
