@@ -8,6 +8,7 @@
 #ifndef MPQC4_SRC_MPQC_CHEMISTRY_QC_WFN_WFN_H_
 #define MPQC4_SRC_MPQC_CHEMISTRY_QC_WFN_WFN_H_
 
+#include "mpqc/chemistry/molecule/energy.h"
 #include "mpqc/chemistry/qc/wfn/wfn_world.h"
 #include "mpqc/chemistry/qc/properties/propertybase.h"
 
@@ -23,7 +24,7 @@ class PropertyBase;
 /// Green's function or reduced density matrix) in a Gaussian basis.
 
 /// \todo elaborate Wavefunction documentation
-class Wavefunction : public DescribedClass {
+class Wavefunction : public Energy {
  private:
   /** Pointer to the WfnWorld
    *
@@ -37,9 +38,6 @@ class Wavefunction : public DescribedClass {
    */
   std::shared_ptr<WavefunctionWorld> wfn_world_;
 
- protected:
-  double energy_ = 0.0;
-
  public:
   /**
    *  \brief The KeyVal constructor
@@ -47,8 +45,10 @@ class Wavefunction : public DescribedClass {
    * The KeyVal object will be queried for the following keywords:
    * | KeyWord | Type | Default| Description |
    * |---------|------|--------|-------------|
-   * | \c "wfn_world" OR \c "..:wfn_world" OR \c "$:wfn_world" | WavefunctionWorld | none | |
-   *
+   * | \c "wfn_world" OR \c "..:wfn_world" OR \c "$:wfn_world" |
+   * WavefunctionWorld | none | This specifies the WavefunctionWorld object in
+   * which this object will live initially. If not found, the contents of this
+   * KeyVal object will be used to construct WavefunctionWorld object |
    *
    */
   Wavefunction(const KeyVal& kv);
@@ -57,7 +57,7 @@ class Wavefunction : public DescribedClass {
   virtual void compute(PropertyBase* pb) = 0;
   virtual double value() = 0;
   virtual void obsolete() {
-    energy_ = 0.0;
+    Energy::obsolete();
   };
 
   const std::shared_ptr<WavefunctionWorld>&
