@@ -4,7 +4,7 @@ using namespace mpqc;
 lcao::WavefunctionWorld::WavefunctionWorld(KeyVal const &kv)
     : world_(*kv.value<madness::World *>("$:world"))
 {
-  mol_ = kv.keyval("molecule").class_ptr<Molecule>();
+  atoms_ = kv.keyval("molecule").class_ptr<Molecule>();
   basis_registry_ = std::make_shared<gaussian::OrbitalBasisRegistry>(kv);
 }
 lcao::WavefunctionWorld::~WavefunctionWorld() = default;
