@@ -4,5 +4,6 @@
 Following is a brief summary of changes made in each release of MPQC.
 
 - <date>: <release>
+  - namespace tree restructured
   - libmpqc can be used from install location
   - Units package ported and updated; can select the CODATA revision
